# AML

./: .gitignore  README.md
data/: .gitkeep
flame/: .gitignore  README.md  main.py  pyproject.toml
flame/flame/: __init__.py  client_app.py  data.py  logging_utils.py  main.py  server_app.py  task.py  utils.py
flame/mlruns/0/: meta.yaml
flame/mlruns/248670333208473884/: meta.yaml
flame/mlruns/248670333208473884/7a5606a6b95f4f3a84e88134dd70242e/: meta.yaml
flame/mlruns/248670333208473884/7a5606a6b95f4f3a84e88134dd70242e/params/: dataset
flame/mlruns/248670333208473884/7a5606a6b95f4f3a84e88134dd70242e/tags/: mlflow.runName  mlflow.source.git.commit
flame/mlruns/360092901210247118/: meta.yaml
flame/mlruns/979119529963437303/: meta.yaml
flame/mlruns/979119529963437303/9935996a1fc4424e9b9154c9e861c70e/: meta.yaml
flame/mlruns/979119529963437303/9935996a1fc4424e9b9154c9e861c70e/metrics/: client_accuracy  client_f1  client_loss
flame/mlruns/979119529963437303/9935996a1fc4424e9b9154c9e861c70e/tags/: mlflow.runName
flame/scripts/: download_data.py  download_paysim.py  start_mlflow_ui.py
flame/test_runs/20250813-200728/: metrics.csv
