# =====================================================================
# For a full TOML configuration guide, check the Flower docs:
# https://flower.ai/docs/framework/how-to-configure-pyproject-toml.html
# =====================================================================

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "flame"
version = "1.0.0"
description = "A Flower/PyTorch federated learning app"
license = {text = "Apache-2.0"}
requires-python = ">=3.10"
# Dependencies for your Flower App
dependencies = [
    "flwr[simulation]>=1.6.0",
    "pandas>=2.0.0",
    "scikit-learn>=1.3.0",
    "torch>=2.1.0",
    "kagglehub>=0.2.5",
    "opacus>=1.4.0",
]

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.flwr.app]
publisher = "Flame"

# Point to your ServerApp and ClientApp objects
# Format: "<module>:<object>"
[tool.flwr.app.components]
serverapp = "flame.server_app:app"
clientapp = "flame.client_app:app"

# Custom config values accessible via `context.run_config`
[tool.flwr.app.config]
num-server-rounds = 3
fraction-fit = 1.0
local-epochs = 2

# Default federation to use when running the app
[tool.flwr.federations]
default = "local-simulation"

# Local simulation federation with 10 virtual SuperNodes
[tool.flwr.federations.local-simulation]
options.num-supernodes = 2
